# chukonu-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
chukonu_cli/: __init__.py  __main__.py  browser.py  client.py  config.py  credentials.py  login_page.html  main.py  paths.py  pkce.py
chukonu_cli/commands/: api.py  auth.py  doctor.py  patent.py  search.py
skills/chukonu-search-general/: SKILL.md
skills/chukonu-search-patent/: SKILL.md
