[project]
name = "chukonu-cli"
version = "0.1.0"
description = "Chukonu search CLI — OAuth-gated access to se4ai general search and patent search via api-gateway."
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "httpx>=0.27",
  "rich>=13",
  "filelock>=3.13",
  "platformdirs>=4",
  "tomli>=2; python_version<'3.11'",
  "tomli-w>=1.0",
]

[project.scripts]
chukonu-cli = "chukonu_cli.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["chukonu_cli", "chukonu_cli.commands"]

[tool.setuptools.package-data]
chukonu_cli = ["login_page.html"]
