[project]
name = "chukonu-cli"
version = "0.1.0"
description = "Chukonu search CLI — OAuth-gated access to se4ai general search and patent search via api-gateway."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "chukonu-team" }]
keywords = ["search", "patent", "chukonu", "se4ai", "cli", "oauth"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Utilities",
]
dependencies = [
  "typer>=0.12",
  "httpx>=0.27",
  "rich>=13",
  "filelock>=3.13",
  "platformdirs>=4",
  "tomli>=2; python_version<'3.11'",
  "tomli-w>=1.0",
]

[project.scripts]
chukonu-cli = "chukonu_cli.main:app"

[project.urls]
Homepage = "https://github.com/chukonu-team/chukonu-cli"
Repository = "https://github.com/chukonu-team/chukonu-cli"
Issues = "https://github.com/chukonu-team/chukonu-cli/issues"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["chukonu_cli", "chukonu_cli.commands"]

[tool.setuptools.package-data]
chukonu_cli = ["login_page.html"]
